bg z-index fix; spoiler hide/show

--- a/css/public.scss
+++ b/css/public.scss
@@ -422,6 +422,7 @@ body {
         height:100%;
         width:200%;
         left:-50%;
+        z-index: -100;
         video {
           position:absolute;
           top: -99999px;
